global project update to java 17th version