@@ -9,23 +9,23 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <aspectj.version>1.9.2</aspectj.version>
+        <aspectj.version>1.9.22</aspectj.version>
         <selenide.version>6.0.1</selenide.version>
         <selenium-java.version>4.11.0</selenium-java.version>
         <selenium-server.version>3.141.59</selenium-server.version>
         <webdrivermanager.version>5.5.3</webdrivermanager.version>
-        <allure.version>2.13.1</allure.version>
-        <allure-testng.version>2.13.1</allure-testng.version>
+        <allure.version>2.24.0</allure.version>
+        <allure-testng.version>2.24.0</allure-testng.version>
         <allure-environment-writer>1.0.0</allure-environment-writer>
-        <aspectjweaver.version>1.9.2</aspectjweaver.version>
+        <aspectjweaver.version>1.9.22</aspectjweaver.version>
         <allure.rest.assured>2.13.1</allure.rest.assured>
         <json.schema.validator>2.9.0</json.schema.validator>
-        <io.rest-assured>4.2.0</io.rest-assured>
+        <io.rest-assured>5.4.0</io.rest-assured>
         <google.code.gson>2.8.5</google.code.gson>
         <json-path>2.5.0</json-path>
         <testng.version>7.0.0</testng.version>
         <mssql-jdbc.version>12.2.0.jre11</mssql-jdbc.version>
-        <lombok.version>1.18.2</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
         <avax.xml.stream.version>1.0-2</avax.xml.stream.version>
         <commons-io.version>2.11.0</commons-io.version>
         <owner.version>1.0.12</owner.version>
@@ -121,6 +121,17 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${io.rest-assured}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.codehaus.groovy</groupId>
+                    <artifactId>groovy-all</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>3.0.21</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -161,9 +172,29 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-testCompile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
